tiny bug squashed

--- a/rsvpstyle.css
+++ b/rsvpstyle.css
@@ -150,6 +150,12 @@
     width: 400px;
     margin: 10px 0px 10px;
   }
+  #submit2 {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin: 10px 0px 10px;
+  }
 }
 
 @media (min-width: 511px) and (max-width: 1200px) {
@@ -263,6 +269,12 @@
     margin: 10px 0px 10px;
   }
   #note {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin: 10px 0px 10px;
+  }
+  #submit2 {
     display: flex;
     flex-direction: column;
     width: 400px;
@@ -399,6 +411,12 @@
     margin: 10px 0px 10px;
   }
   #note {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin: 10px 0px 10px;
+  }
+  #submit2 {
     display: flex;
     flex-direction: column;
     width: 400px;
